[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [ "helloki <helloki@mailbox.org>" ]

[workspace.dependencies]
hell_error       = { path = "../hust/crates/hell_error" }
hell_collections = { path = "../hust/crates/hell_collections" }

hell_core      = { path = "crates/hell_core" }
hell_common    = { path = "crates/hell_common" }
hell_utils     = { path = "crates/hell_utils" }
hell_resources = { path = "crates/hell_resources" }

num = "0.4.0"
num-traits = "0.2"
num-derive= "0.3"

glam = "0.22.0"
bitflags = "1.3.2"
strum = { version = "0.24.1", features = ["derive"] }
memoffset = "0.6.5"
lazy_static = "1.4"

serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"

image  = "0.24.3"
winit = "0.27.1"
ash = "0.37.0+1.3.209"
