[workspace]
members = [
    "lib/*",
    "bin/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [ "helloki <helloki@mailbox.org>" ]

[workspace.dependencies]
hell_core      = { path = "lib/hell_core" }
hell_common    = { path = "lib/hell_common" }
hell_app       = { path = "lib/hell_app" }
hell_input     = { path = "lib/hell_input" }
hell_renderer  = { path = "lib/hell_renderer" }
hell_utils     = { path = "lib/hell_utils" }
hell_resources = { path = "lib/hell_resources" }

hell_error       = { path = "../hust/lib/hell_error" }
hell_collections = { path = "../hust/lib/hell_collections" }


num = "0.4.0"
num-traits = "0.2"
num-derive= "0.3"

glam = "0.22.0"
bitflags = "1.3.2"
strum = { version = "0.24.1", features = ["derive"] }
memoffset = "0.6.5"
lazy_static = "1.4"

serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"

image  = "0.24.3"
winit = "0.27.1"
ash = "0.37.0+1.3.209"
