[package]
name = "hell_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_common    = { path = "../hell_common" }
hell_error     = { path = "../hell_error" }
hell_renderer  = { path = "../hell_renderer" }
hell_resources = { path = "../hell_resources" }
