[package]
name = "hell_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_common = { path = "../hell_common" }
hell_math = { path = "../hell_math" }
hell_utils = { path = "../hell_utils" }

num = "0.4.0"
glam = "0.21.3"
ash = "0.37.0+1.3.209"
memoffset = "0.6.5"
image  = "0.24.3"
