[package]
name = "hell_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_error     = { path = "../../../hust/crates/hell_error" }
hell_core      = { path = "../hell_core" }
hell_common    = { path = "../hell_common" }
hell_input     = { path = "../hell_input" }
hell_renderer  = { path = "../hell_renderer" }
hell_resources = { path = "../hell_resources" }
