[package]
name = "hell_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_error  = { path = "../../../hust/crates/hell_error" }

bitflags.workspace = true
strum.workspace = true
num-traits.workspace = true
num-derive.workspace = true
