[package]
name = "hell_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_core      = { path = "../hell_core" }
hell_common    = { path = "../hell_common" }
hell_error     = { path = "../../../hust/crates/hell_error" }
hell_utils     = { path = "../hell_utils" }
hell_resources = { path = "../hell_resources" }

num.workspace = true
glam.workspace = true
ash.workspace = true
memoffset.workspace = true
image .workspace = true
lazy_static.workspace = true
