[package]
name = "hell_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_error.workspace = true
hell_collections.workspace = true

hell_core.workspace = true
hell_common.workspace = true
hell_utils.workspace = true
hell_resources.workspace = true

num.workspace = true
glam.workspace = true
ash.workspace = true
memoffset.workspace = true
image .workspace = true
lazy_static.workspace = true
bitflags.workspace = true
