[package]
name = "hell_renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
hell_error.workspace = true
hell_collections.workspace = true

hell_core.workspace = true
hell_common.workspace = true
hell_utils.workspace = true
hell_resources.workspace = true

num.workspace = true
glam.workspace = true
ash.workspace = true
memoffset.workspace = true
image .workspace = true
lazy_static.workspace = true
bitflags.workspace = true
serde.workspace = true
serde_yaml.workspace = true
