[package]
name = "hell_resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_core  = { path = "../hell_core" }
hell_error = { path = "../../../hust/crates/hell_error" }

image.workspace = true
serde.workspace = true
serde_yaml.workspace = true
