[package]
name = "hell_winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hell_error  = { path = "../../../hust/crates/hell_error" }
hell_common = { path = "../hell_common" }
hell_input  = { path = "../hell_input" }
hell_app    = { path = "../hell_app" }

winit = "0.27.1"

